<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--  Main  -->
    <string name="app_name">Mp3다운로더</string>
    <string name="market_url">com.euroasiamp3.kr</string>
    <string name="footer_message">귀하가 실행하고 있는것은 MP3다운로더V1.0.6입니다</string>
    
    <!-- EULA -->
    <string name="eula">
        이 소프트웨어의 공식 허가사용은 공개 도메인에서 자유롭게 사용할 수 있는 오디오 파일로 제한됩니다. 귀하는 거주국가의 법, 구글 앤드로이드 마켓 및 운영업체 서비스 약관에서 지정한 조건과 프레임 내에서 이 소프트웨어를 사용하는데 동의합니다. 이 소프트웨어는 공개 검색 엔진의 단순한 인터페이스이며 유로아시아 싱가포르(EuroAsia Singapore)는 오용의 경우 책임을 지지 않습니다. 이 도구의 불법 사용은 엄격히 금지되어 있습니다. 귀하 혼자는 자신의 행동에 대해 책임이 있습니다.
    </string>
    
    <!-- Free Apps & Offers Settings -->
    <string name="btn_offers_name">동영상 보기</string>
	<string name="topappsurl">http://freemp3musicdownload.mobi/videos/</string> <!-- For Free App Offers -->
	
	<!-- Ad Mobs Banner Ads ID -->
	<string name="admobBID">a1509c754789a61</string>
	
<!--  Languages -->
    <!-- Content Descriptions -->
    <string name="logo_icon_desc">Home Button</string>
    <string name="action_search_desc">Search Button</string>
    
    <!-- Buttons -->
    <string name="btn_search_name">검색</string>
    <string name="btn_topten_name">인기 곡</string>
    <string name="btn_downloads_name">다운로드</string>
    <string name="btn_rate_name">응용프로그램 평가</string>
    <string name="btn_share_name">응용프로그램 공유</string>
    <string name="btn_cancel_name">취소</string>
    <string name="download_song">노래 다운로드</string>
    <string name="share_song">노래 공유</string>
    
    <!-- Edit Texts -->
    <string name="edittext_search_hint">노래 혹은 아티스트를 입력</string>
    
    <!-- Names -->
    <string name="no_results">결과를 찾을 수 없습니다</string>
    <string name="error_results">결과를 로드하는 중 오류 발생</string>
    <string name="no_active">귀하는 인터넷에 연결되지 않았거나 신호가 약한것 같습니다. Wi-Fi 혹은 데이터를 설정하고 다시 시도하십시오.</string>
    
    <!-- Share Language -->
    <string name="checkout">이 노래를 체크아웃</string>
    <string name="dlmessage">안녕, 이 노래를 다운로드 하세요 : )</string>
    
    <!-- Toast Make -->
    <string name="failedloading">노래 로딩에 실패했습니다. 다시 시도하십시오.</string>
    <string name="addedqueue">다운로드를 대기열에 추가</string>
</resources>